<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_functions"
        android:title="@string/menu_bottom_nav_functions"
        android:icon="@drawable/ic_menu"/>

    <item
        android:id="@+id/action_formulas"
        android:title="@string/menu_bottom_nav_formulas"
        android:icon="@drawable/ic_functions"/>

    <item
        android:id="@+id/action_developer"
        android:title="@string/menu_bottom_nav_about_developer"
        android:icon="@drawable/ic_person"/>

    <item
        android:id="@+id/action_history_updates"
        android:title="@string/menu_bottom_nav_history_updates"
        android:icon="@drawable/ic_system_update"/>

    <item
        android:id="@+id/action_settings"
        android:title="@string/menu_bottom_nav_settings"
        android:icon="@drawable/ic_settings"/>

</menu>