<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/common_padding_min"
    tools:context=".usecases.common.CalculatorActivity">

    <TextView
        android:id="@+id/tvOperation"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        tools:text="5x2"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/MyTextViewHeadLine6"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_vertical|end"
        tools:text="10.0"
        app:layout_constraintTop_toBottomOf="@id/tvOperation"
        app:layout_constraintBottom_toTopOf="@id/llTop"
        style="@style/MyTextViewHeadLine3"
        tools:ignore="MissingConstraints"/>

    <LinearLayout
        android:id="@+id/llBottom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        style="@style/MyLinealLayout"
        tools:ignore="MissingConstraints"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btnPoint"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/calc_btn_point"
            style="@style/MyOperationButton"
            tools:ignore="MissingConstraints"/>
        <Button
            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/calc_btn_zero"
            style="@style/MyNumberButtons"
            tools:ignore="MissingConstraints"/>
        <Button
            android:id="@+id/btnResult"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:text="@string/calc_btn_result"
            style="@style/MyOperationButton"
            tools:ignore="MissingConstraints"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llPreBottom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        style="@style/MyLinealLayout"
        tools:ignore="MissingConstraints"
        app:layout_constraintBottom_toTopOf="@id/llBottom">

        <Button
            android:id="@+id/btnOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/calc_btn_One"
            style="@style/MyNumberButtons"
            tools:ignore="MissingConstraints"/>
        <Button
            android:id="@+id/btnTwo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/calc_btn_Two"
            style="@style/MyNumberButtons"
            tools:ignore="MissingConstraints"/>
        <Button
            android:id="@+id/btnThree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/calc_btn_three"
            style="@style/MyNumberButtons"
            tools:ignore="MissingConstraints"/>
        <Button
            android:id="@+id/btnSum"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:layout_marginEnd="@dimen/common_padding_min"
            android:onClick="onClickButton"
            android:text="@string/calc_btn_sum"
            android:textSize="@dimen/calc_btn_text_size"
            android:layout_marginStart="@dimen/common_padding_min"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textColor="@color/colorSurface"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llMiddle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        style="@style/MyLinealLayout"
        tools:ignore="MissingConstraints"
        app:layout_constraintBottom_toTopOf="@id/llPreBottom">

        <Button
            android:id="@+id/btnFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/calc_btn_four"
            style="@style/MyNumberButtons"
            tools:ignore="MissingConstraints"/>
        <Button
            android:id="@+id/btnFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/calc_btn_five"
            style="@style/MyNumberButtons"
            tools:ignore="MissingConstraints"/>
        <Button
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/calc_btn_six"
            style="@style/MyNumberButtons"
            tools:ignore="MissingConstraints"/>
        <Button
            android:id="@+id/btnMin"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/calc_btn_min"
            style="@style/MyOperationButton"
            tools:ignore="MissingConstraints"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llPreTop"
        android:layout_width="0dp"
        android:layout_height="0dp"
        style="@style/MyLinealLayout"
        tools:ignore="MissingConstraints"
        app:layout_constraintBottom_toTopOf="@id/llMiddle">

        <Button
            android:id="@+id/btnSeven"
            android:layout_width="0dp"
            android:layout_weight="25"
            android:layout_height="match_parent"
            android:text="@string/calc_btn_seven"
            style="@style/MyNumberButtons"
            tools:ignore="MissingConstraints"/>
        <Button
            android:id="@+id/btnEight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/calc_btn_eight"
            style="@style/MyNumberButtons"
            tools:ignore="MissingConstraints"/>
        <Button
            android:id="@+id/btnNine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/calc_btn_nine"
            style="@style/MyNumberButtons"
            tools:ignore="MissingConstraints"/>
        <Button
            android:id="@+id/btnMul"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/calc_btn_mul"
            style="@style/MyOperationButton"
            tools:ignore="MissingConstraints"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llTop"
        android:layout_width="0dp"
        android:layout_height="0dp"
        style="@style/MyLinealLayout"
        tools:ignore="MissingConstraints"
        app:layout_constraintBottom_toTopOf="@id/llPreTop">


        <Button
            android:id="@+id/btnClear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            style="@style/MyDeleteButton"
            tools:ignore="MissingConstraints"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDelete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:onClick="onClickButton"
            android:layout_marginStart="@dimen/common_padding_min"
            app:icon="@drawable/ic_backspace"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/common_padding_min"/>
        <Button
            android:id="@+id/btnDiv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/calc_btn_div"
            style="@style/MyOperationButton"
            tools:ignore="MissingConstraints"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>