<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/common_padding_default"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".usecases.fragments.FragmentsFunctions.ContainerProportionFragment">

    <TextView
        android:id="@+id/tvFormula"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/formula_options_descuento"
        android:layout_marginTop="@dimen/common_padding_min"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/TextAppearance.MaterialComponents.Subtitle2"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnMenuCalculate"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/menu_options_directly_proportional"
        app:layout_constraintTop_toBottomOf="@id/tvFormula"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contentOperations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnMenuCalculate">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilVariableA"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_default"
            android:paddingHorizontal="@dimen/common_padding_min"
            android:hint="@string/hint_value_a"
            app:prefixText="@string/prefix_value_a"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tilVariableX"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etVariableA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilVariableX"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_default"
            android:paddingHorizontal="@dimen/common_padding_min"
            android:hint="@string/hint_value_x"
            app:prefixText="@string/prefix_value_x"
            app:layout_constraintStart_toEndOf="@+id/tilVariableA"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etVariableX"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilVariableB"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_padding_min"
            android:layout_marginTop="@dimen/common_padding_min"
            android:hint="@string/hint_value_b"
            app:prefixText="@string/prefix_value_b"
            app:layout_constraintTop_toBottomOf="@+id/tilVariableA"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/cvViewOneRight"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etVariableB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvViewOneRight"
            android:visibility="visible"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tilVariableA"
            app:layout_constraintStart_toEndOf="@id/tilVariableB"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Theme.SmartCalculator.CardView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/common_padding_default"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="25"
                    android:text="@string/prefix_value_y"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    style="@style/TextAppearance.MaterialComponents.Body1"/>

                <TextView
                    android:id="@+id/tvResultado"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="75"
                    android:gravity="end"
                    android:text="@string/hint_value_result_simbol"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    style="@style/TextAppearance.MaterialComponents.Body1"/>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnChange"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:icon="@drawable/ic_compare_arrows"
        android:text="@string/hint_value_exchange"
        android:layout_marginHorizontal="@dimen/common_padding_min"
        android:layout_marginTop="@dimen/common_padding_min"
        app:layout_constraintTop_toBottomOf="@id/contentOperations"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnResult"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/hint_value_result"
        android:layout_marginEnd="@dimen/common_padding_min"
        android:layout_marginTop="@dimen/common_padding_min"
        android:layout_marginHorizontal="@dimen/common_padding_min"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contentOperations"/>

</androidx.constraintlayout.widget.ConstraintLayout>